--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Fredoka:wght@400;500;600&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.fredoka {
+  font-family: "Fredoka", sans-serif;
+}
