--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,16 @@
 .fredoka {
   font-family: "Fredoka", sans-serif;
 }
+
+.show-output {
+  position: fixed;
+  z-index: 20;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  margin: auto;
+  width: 100vw;
+  height: 100vh;
+  display: block;
+}
